Added more links to different sections.

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1133,7 +1133,7 @@
             <p>
               If you are finding Git hard to understand, you can learn Git
               Desktop created by GitHub which makes using Git less complicated.
-              Use it for a while and then come back to Git. Then you to choose
+              Use it for a while and then come back to Git. After that, you can choose
               which ever version control service you prefer among GitHub, GitLab
               and BitBucket.
             </p>
@@ -1252,15 +1252,45 @@
 
           <div class="resource-section__body">
             <p>
-              Now that you have successfully hosted your codes on GitHub or
+              Now that you have successfully hosted your codes on GitHub, GitLab or
               BitBucket, you would want a server to host your frontend
               applications either temporarily or permanently and also have
               testable links which you can share with friends and potential
-              clients so they can admire and see the hard work you have done.
+              clients so they can admire and see the hard work you have done. 
+              You can choose any of the services below.
             </p>
           </div>
 
           <div class="resource-section__links">
+            <!--* Netlify -->
+            <div id="netlify" class="resource-card">
+              <h3 class="resource-card-title">Netlify</h3>
+              <ul class="resource-card-links">
+                <li class="resource-link">
+                  <a target="_blank" href="https://netlify.com">Website</a>
+                  <span class="resource-link-badge">Link</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://docs.netlify.com/"
+                    >Documentation.</a
+                  >
+                  <span class="resource-link-badge">Link</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/cUMUTS2ybhg"
+                    >Host websites on Netlify for free. ~ Packetcode</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/bjVUqvcCnxM"
+                    >Deploy websites in seconds with Netlify ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+              </ul>
+            </div>
+
             <!--* Vercel -->
             <div id="vercel" class="resource-card">
               <h3 class="resource-card-title">Vercel</h3>
@@ -1290,29 +1320,23 @@
               </ul>
             </div>
 
-            <!--* Netlify -->
-            <div id="netlify" class="resource-card">
+            <!--*  GitHub pages -->
+            <div id="github" class="resource-card">
               <h3 class="resource-card-title">Netlify</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="https://netlify.com">Website</a>
-                  <span class="resource-link-badge">Link</span>
+                  <a target="_blank" href="https://pages.github.com/">What is GitHub pages.~ GitHub</a>
+                  <span class="resource-link-badge">Article</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://docs.netlify.com/"
-                    >Documentation.</a
+                  <a target="_blank" href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages"
+                    >GitHub Documentation.</a
                   >
-                  <span class="resource-link-badge">Link</span>
+                  <span class="resource-link-badge">Article</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/cUMUTS2ybhg"
-                    >Host websites on Netlify for free. ~ Packetcode</a
-                  >
-                  <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="https://youtu.be/bjVUqvcCnxM"
-                    >Deploy websites in seconds with Netlify ~ Travesty Media</a
+                  <a target="_blank" href="https://youtu.be/8hrJ4oN1u_8"
+                    >How to host a website on GitHub . ~ Programmingknowledge</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
@@ -1631,16 +1655,16 @@
             </p>
             <p>
               Before picking your first framework/library, check these videos out;
-              <a
+              <p><a
                 class="resource-link paragraph-links"
                 href="https://youtu.be/LimOOe6I4eo"
                 >What are frameworks and libraries. ~ Codeacademy</a
-              >
-              <a
+              ></p>
+              <p><a
                 class="resource-link paragraph-links"
                 href="https://youtu.be/N6SXu86bJ6I"
                 >Top CSS frameworks to check out in 2021. ~ Adrian Twarog</a
-              >
+              ></p>
             </p>
           </div>
 
