Added GitHub pages to side menu

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -225,10 +225,13 @@
               <a href="#deployment">Deployment Services</a>
               <ul class="sidebar-sublinks">
                 <li class="sidebar-subtitle">
+                  <a href="#netlify">Netlify</a>
+                </li>
+                <li class="sidebar-subtitle">
                   <a href="#vercel">Vercel</a>
                 </li>
                 <li class="sidebar-subtitle">
-                  <a href="#netlify">Netlify</a>
+                  <a href="#github-pages">GitHub Pages</a>
                 </li>
               </ul>
             </li>
@@ -1321,8 +1324,8 @@
             </div>
 
             <!--*  GitHub pages -->
-            <div id="github" class="resource-card">
-              <h3 class="resource-card-title">Netlify</h3>
+            <div id="github-pages" class="resource-card">
+              <h3 class="resource-card-title">GitHub Pages</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="https://pages.github.com/">What is GitHub pages.~ GitHub</a>
