Added css Frameworks links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1333,7 +1333,7 @@
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="https://docs.github.com/en/pages/getting-started-with-github-pages/about-github-pages"
-                    >GitHub Documentation.</a
+                    >GitHub Pages documentation.</a
                   >
                   <span class="resource-link-badge">Article</span>
                 </li>
@@ -1679,95 +1679,53 @@
               </h3>
 
               <ul class="resource-card-links">
-                <!-- videos -->
                 <li class="resource-link">
-                  Videos
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://getbootstrap.com/"
+                    >Website</a
+                  >
+                  <span class="resource-link-badge">Link</span>
                 </li>
-                <!-- playlist -->
                 <li class="resource-link">
-                  Curated Playlist
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/4sosXZsdy-s"
+                    >Bootstrap 5 beginner crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- paid courses -->
                 <li class="resource-link">
-                  Paid Courses
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/-qfEOE4vtxE"
+                    >Bootstrap full course. ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- articles -->
                 <li class="resource-link">
-                  Articles
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9joIM91nLzd_qaH_AimmdAR"
+                    >Bootstrap 5 tutorial. ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- projects -->
                 <li class="resource-link">
-                  Practice Projects
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/TJF4ldO91n4"
+                    >Build a complete Bootstrap website. ~ Drew Ryan</a
+                  >
+                  <span class="resource-link-badge"></span>
                 </li>
-                <!-- others -->
                 <li class="resource-link">
-                  Others
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL1MK7nFniZZYRV5sign661Pq--3DbF9Bn"
+                    >Html, Css and Bootstrap projects. ~ Ansar Ali</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
               </ul>
             </div>
@@ -1779,95 +1737,45 @@
               </h3>
 
               <ul class="resource-card-links">
-                <!-- videos -->
                 <li class="resource-link">
-                  Videos
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://tailwindcss.com/"
+                    >Website</a
+                  >
+                  <span class="resource-link-badge">Link</span>
                 </li>
-                <!-- playlist -->
                 <li class="resource-link">
-                  Curated Playlist
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/UBOj6rqRUME"
+                    >Tailwind Css crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- paid courses -->
                 <li class="resource-link">
-                  Paid Courses
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9gpXORlEHjc5bgnIi5HEGhw"
+                    >Tailwind CSS tutorial. ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- articles -->
                 <li class="resource-link">
-                  Articles
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/Vp6GC3jKG20"
+                    >Build and deploy a personal Portfolio using Tailwind CSS. ~ Design Course</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- projects -->
                 <li class="resource-link">
-                  Practice Projects
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <!-- others -->
-                <li class="resource-link">
-                  Others
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/oWsbAI8pGc8"
+                    >Build Facebook UI clone using Tailwind Css. ~ Ithinktechnologies</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
               </ul>
             </div>
@@ -1879,96 +1787,46 @@
               </h3>
 
               <ul class="resource-card-links">
-                <!-- videos -->
                 <li class="resource-link">
-                  Videos
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://bulma.io/"
+                    >Website</a
+                  >
+                  <span class="resource-link-badge">Link</span>
                 </li>
-                <!-- playlist -->
                 <li class="resource-link">
-                  Curated Playlist
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/IiPQYQT2-wg"
+                    >Bulma Css crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- paid courses -->
                 <li class="resource-link">
-                  Paid Courses
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9iXItWKbaQxcyDT1u6E7a8a"
+                    >Bulma CSS tutorial. ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- articles -->
                 <li class="resource-link">
-                  Articles
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/RD2m0FkTS_o"
+                    >Admin dashboard template design with Bulma. ~ FrontEndFunn</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- projects -->
                 <li class="resource-link">
-                  Practice Projects
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <!-- others -->
-                <li class="resource-link">
-                  Others
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/hiTxsjxHIMY"
+                    >How to build a company website with bulma. ~ Duomly</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li> 
               </ul>
             </div>
           </div>
