--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1717,7 +1717,7 @@
                     href="https://youtu.be/TJF4ldO91n4"
                     >Build a complete Bootstrap website. ~ Drew Ryan</a
                   >
-                  <span class="resource-link-badge"></span>
+                  <span class="resource-link-badge">Video</span>
                 </li>
                 <li class="resource-link">
                   <a
@@ -1777,7 +1777,7 @@
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
-              </ul>
+              </ul> 
             </div>
 
             <!--* Bulma -->
@@ -2150,95 +2150,77 @@
               <h3 class="resource-card-title">ReactJs</h3>
 
               <ul class="resource-card-links">
-                <!-- videos -->
                 <li class="resource-link">
-                  Videos
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://reactjs.org/"
+                    >Website</a
+                  >
+                  <span class="resource-link-badge">Link</span>
                 </li>
-                <!-- playlist -->
                 <li class="resource-link">
-                  Playlist
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/w7ejDZ8SWv8"
+                    >ReactJs crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- paid courses -->
                 <li class="resource-link">
-                  Paid Courses
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/nTeuhbP7wdE"
+                    >ReactJs full course for beginners. ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- articles -->
                 <li class="resource-link">
-                  Articles
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9gZD-Tvwfod2gaISzfRiP9d"
+                    >Full modern ReactJs tutorial. ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- projects -->
                 <li class="resource-link">
-                  Practice Projects
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/Jppuj6M1sJ4"
+                    >React Router crash course. ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- others -->
                 <li class="resource-link">
-                  Others
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/zEQiNFAwDGo"
+                    >React Router 6. What changed and upgrading guide. ~ Academind</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/a_7Z7C_JCyo"
+                    >15 ReactJs projects . ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/LlvBzyy-558"
+                    >React hooks course. All React hooks explained. ~ PedroTech</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PLC3y8-rFHvwisvxhZ135pogtX7_Oe3Q3A"
+                    >React hooks tutorial. ~ Codevolution</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
               </ul>
             </div>
@@ -2248,95 +2230,53 @@
               <h3 class="resource-card-title">Vue</h3>
 
               <ul class="resource-card-links">
-                <!-- videos -->
                 <li class="resource-link">
-                  Videos
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://vuejs.org/"
+                    >Website</a
+                  >
+                  <span class="resource-link-badge">Link</span>
                 </li>
-                <!-- playlist -->
                 <li class="resource-link">
-                  Playlist
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/qZXt1Aom3Cs"
+                    >VueJs crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- paid courses -->
                 <li class="resource-link">
-                  Paid Courses
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/FXpIoQ_rT_c"
+                    >VueJs course for beginners. ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- articles -->
                 <li class="resource-link">
-                  Articles
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9hYYGbV60Vq3IXYNfDk8At1"
+                    >VueJs 3 tutorial. ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- projects -->
                 <li class="resource-link">
-                  Practice Projects
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/Vp6GC3jKG20"
+                    >Build and deploy a personal Portfolio using Tailwind CSS. ~ Design Course</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- others -->
                 <li class="resource-link">
-                  Others
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/oWsbAI8pGc8"
+                    >Build Facebook UI clone using Tailwind Css. ~ Ithinktechnologies</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
               </ul>
             </div>
@@ -2346,95 +2286,45 @@
               <h3 class="resource-card-title">Angular</h3>
 
               <ul class="resource-card-links">
-                <!-- videos -->
                 <li class="resource-link">
-                  Videos
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://tailwindcss.com/"
+                    >Website</a
+                  >
+                  <span class="resource-link-badge">Link</span>
                 </li>
-                <!-- playlist -->
                 <li class="resource-link">
-                  Playlist
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/UBOj6rqRUME"
+                    >Tailwind Css crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- paid courses -->
                 <li class="resource-link">
-                  Paid Courses
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9gpXORlEHjc5bgnIi5HEGhw"
+                    >Tailwind CSS tutorial. ~ The Net Ninja</a
+                  >
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
-                <!-- articles -->
                 <li class="resource-link">
-                  Articles
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/Vp6GC3jKG20"
+                    >Build and deploy a personal Portfolio using Tailwind CSS. ~ Design Course</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
-                <!-- projects -->
                 <li class="resource-link">
-                  Practice Projects
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <!-- others -->
-                <li class="resource-link">
-                  Others
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/oWsbAI8pGc8"
+                    >Build Facebook UI clone using Tailwind Css. ~ Ithinktechnologies</a
+                  >
+                  <span class="resource-link-badge">Video</span>
                 </li>
               </ul>
             </div>
