Added more framework links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -1756,6 +1756,14 @@
                 <li class="resource-link">
                   <a
                     target="_blank"
+                    href="https://youtu.be/4wGmylafgM4"
+                    >Tailwind Css tutorials for beginners. ~ Scrimba</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
                     href="https://youtube.com/playlist?list=PL4cUxeGkcC9gpXORlEHjc5bgnIi5HEGhw"
                     >Tailwind CSS tutorial. ~ The Net Ninja</a
                   >
@@ -1800,6 +1808,14 @@
                     target="_blank"
                     href="https://youtu.be/IiPQYQT2-wg"
                     >Bulma Css crash course. ~ Travesty Media</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://youtu.be/LBzZLzu2GKo"
+                    >Bulma full course for beginners. ~ FreeCodeCamp</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
@@ -2250,9 +2266,9 @@
                   <a
                     target="_blank"
                     href="https://youtu.be/FXpIoQ_rT_c"
-                    >VueJs course for beginners. ~ FreeCodeCamp</a
+                    >VueJs full course for beginners. ~ FreeCodeCamp</a
                   >
-                  <span class="resource-link-badge">Playlist</span>
+                  <span class="resource-link-badge">Video</span>
                 </li>
                 <li class="resource-link">
                   <a
@@ -2265,16 +2281,16 @@
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://youtu.be/Vp6GC3jKG20"
-                    >Build and deploy a personal Portfolio using Tailwind CSS. ~ Design Course</a
+                    href="https://youtube.com/playlist?list=PL8p2I9GklV44m5tFH-zjCmTiHeq9GZrby"
+                    >Build a restaurant management project with VueJs. ~ Code step by step</a
                   >
-                  <span class="resource-link-badge">Video</span>
+                  <span class="resource-link-badge">Playlist</span>
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://youtu.be/oWsbAI8pGc8"
-                    >Build Facebook UI clone using Tailwind Css. ~ Ithinktechnologies</a
+                    href="https://youtu.be/vsJtN54aA7w"
+                    >Build an invoice app with Vue3, vuex and firebase. ~ John Kormanicki
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
@@ -2289,7 +2305,7 @@
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://tailwindcss.com/"
+                    href="https://angular.io/"
                     >Website</a
                   >
                   <span class="resource-link-badge">Link</span>
@@ -2297,32 +2313,32 @@
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://youtu.be/UBOj6rqRUME"
-                    >Tailwind Css crash course. ~ Travesty Media</a
+                    href="https://youtu.be/3dHNOWTI7H8"
+                    >Angular crash course. ~ Travesty Media</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://youtube.com/playlist?list=PL4cUxeGkcC9gpXORlEHjc5bgnIi5HEGhw"
-                    >Tailwind CSS tutorial. ~ The Net Ninja</a
+                    href="https://youtu.be/2OHbjep_WjQ"
+                    >Angular full course for beginners. ~ FreeCodeCamp</a
+                  >
+                  <span class="resource-link-badge">Video</span>
+                </li>
+                <li class="resource-link">
+                  <a
+                    target="_blank"
+                    href="https://youtube.com/playlist?list=PLFuqtLQvVtC7IU7A_EsOKLCgp8UbJJ89u"
+                    >Angular Js tutorial. ~ The Net Ninja</a
                   >
                   <span class="resource-link-badge">Playlist</span>
                 </li>
                 <li class="resource-link">
                   <a
                     target="_blank"
-                    href="https://youtu.be/Vp6GC3jKG20"
-                    >Build and deploy a personal Portfolio using Tailwind CSS. ~ Design Course</a
-                  >
-                  <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a
-                    target="_blank"
-                    href="https://youtu.be/oWsbAI8pGc8"
-                    >Build Facebook UI clone using Tailwind Css. ~ Ithinktechnologies</a
+                    href="https://youtu.be/s7bKr_-GLtM"
+                    >Create admin dashboard using Angular. ~ Simplilearn</a
                   >
                   <span class="resource-link-badge">Video</span>
                 </li>
