Added some design resource links

--- a/src/html/careers/frontend.html
+++ b/src/html/careers/frontend.html
@@ -2364,47 +2364,14 @@
               <h3 class="resource-card-title">Fonts</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
+                  <a target="_blank" href="https://fonts.google.com/">Google Fonts</a>
                   <span class="resource-link-badge">Free</span>
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
+                      <a target="_blank" href="https://youtu.be/qgmLDPLApBY">Add custom fonts to your website using Google Fonts. ~ Dcode</a>
                     </li>
                     <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 2</a>
-                  <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 3</a>
-                  <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
+                      <a target="_blank" href="https://youtu.be/Hwq_Mr12bcI">How to import new fonts. ~ Dani Krossing</a>
                     </li>
                   </ul>
                 </li>
@@ -2416,47 +2383,11 @@
               <h3 class="resource-card-title">Icons</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
+                  <a target="_blank" href="https://fontawesome.com/">Font Awesome Icons</a>
                   <span class="resource-link-badge">Free</span>
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 2</a>
-                  <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 3</a>
-                  <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
+                      <a target="_blank" href="https://youtu.be/nHKjsqw0zw8">How to add Fontawesone to your html. ~ KodeBase</a>
                     </li>
                   </ul>
                 </li>
@@ -2468,49 +2399,8 @@
               <h3 class="resource-card-title">Stock Photos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#">Link 1</a>
+                  <a target="_blank" href="https://unsplash.com/">Unsplash</a>
                   <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 2</a>
-                  <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#">Link 3</a>
-                  <span class="resource-link-badge">Free</span>
-                  <ul class="resource-link-sublinks">
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#">Link</a>
-                    </li>
-                  </ul>
                 </li>
               </ul>
             </div>
